# GlobeCloud

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  globecloud_cinematic.html  pyproject.toml  requirements.txt
.cursor/rules/: github-sync.mdc
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml
deploy/: docker-compose.regional.yml  docker-compose.yml
deploy/fly/: ap.toml  eu.toml  gateway.toml  us.toml
docs/: DEPLOY.md  GETTING_STARTED.md  PRODUCT.md  RUNBOOK.md  TUNNEL.md
e2e/: smoke.spec.ts
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/brand/: tokens.css
frontend/src/components/: Globe3D.tsx  Globe3DLazy.tsx  GlobeMap.tsx
frontend/src/lib/: api.ts  auth.ts  geo3d.ts  hooks.ts  metricsBuffer.ts  motion.ts  oauthErrors.ts  settings.ts  useAuth.ts  useMotionPrefs.ts  utils.ts  welcome.ts
scripts/: backup-postgres.sh  deploy-fly.sh  deploy-global-fly.sh  import-catalog.sh  migrate.sh  provision-fly-postgres.sh  publish-github.sh  rebuild.sh  rotate-api-key.sh  seed-production.sh  setup-local-postgres.sh  setup-oauth.sh  setup-supabase.sh  setup.sh  share-demo.sh  share-tunnel.sh  smoke-test.sh  start-clean.sh  start-multiregion.sh  start-production-local.sh  sync-env-secrets.py
scripts/lib/: env.sh
seed/: catalog.json
src/globe/: __init__.py  cli.py  config.py  main.py
tests/: conftest.py
tests/unit/: test_auth.py  test_config.py  test_db_url.py  test_oauth.py  test_platform_store.py
(+133 files in other folders)
